# DifferentiableNumber

./: .gitignore  DifferentiableNumber.cabal  DifferentiableNumber.leo  Setup.hs
sources/: Differentiable.hs
sources/Data/: Differentiable.hs  FunctionExpansion.hs  Number.hs  Quantum3D.hs
sources/Data/Differentiable/: FunctionExpansion.hs  Number.hs  Quantum.hs  Quantum3D.hs  Testing.hs
sources/Data/Differentiable/Quantum/: MultiParticle.hs  SingleParticle.hs
tests/: MultiParticle.hs  SingleParticle.hs  test.hs
